--- a/WebBanCafeV3/src/main/resources/templates/products/add-product.html
+++ b/WebBanCafeV3/src/main/resources/templates/products/add-product.html
@@ -5,77 +5,127 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Product</title>
-    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- mobile metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- site metas -->
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <!-- style css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <!-- Responsive-->
+    <link rel="stylesheet" th:href="@{/css/responsive.css}">
+    <!-- fevicon -->
+    <link rel="icon" th:href="@{/images/fevicon.png}" type="image/gif" />
+    <!-- font css -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+    <!-- Scrollbar Custom CSS -->
+    <link rel="stylesheet" th:href="@{/css/jquery.mCustomScrollbar.min.css}">
+    <!-- Tweaks for older IEs-->
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand text-white" href="/">Web Bán Cafe</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link text-white active" aria-current="page" href="/products">Product</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a th:href="@{/products/add}" class="nav-link text-white">Add New Product</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a th:href="@{/categories/add}" class="nav-link text-white">Add New Category</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-                <li class="nav-item d-flex align-items-center" sec:authorize="isAuthenticated()">
-                        <span class="navbar-text text-white">
-                            Xin chào, <span sec:authentication="name" style="margin-right: 20px;"></span>
-                        </span>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <form th:action="@{/logout}" method="post">
-                        <button class="btn btn-outline-light" type="submit">Logout</button>
-                    </form>
-                </li>
-                <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a class="btn btn-outline-light" href="/login">Login</a>
-                </li>
-            </ul>
+    <div class="header_section header_bg">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="/"><img th:src="@{/images2/logo.png}"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-black active" aria-current="page" href="/products" style="margin-left: 20px;">Product</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                            <a th:href="@{/products/add}" class="nav-link text-black">Add New Product</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                            <a th:href="@{/categories/add}" class="nav-link text-black">Add New Category</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
+                        <li class="nav-item active">
+                            <a class="nav-link text-black" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="/coffees">Coffees</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="/blog">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" href="/contact" style="margin-right: 20px;">Contact</a>
+                        </li>
+                        <li class="nav-item d-flex align-items-center" sec:authorize="isAuthenticated()">
+                            <span class="navbar-text text-black user_icon" style="margin-right: 20px;">
+                                <i class = "fa fa-user" aria-hidden="true"></i>
+                                <span sec:authentication="name"></span>
+                            </span>
+                        </li>
+                        <li class="nav-item" sec:authorize="isAuthenticated()">
+                            <form th:action="@{/logout}" method="post">
+                                <button class="btn btn-outline-light text-black" type="submit">Logout</button>
+                            </form>
+                        </li>
+                        <li class="nav-item" sec:authorize="!isAuthenticated()">
+                            <a class="btn btn-outline-light text-black" href="/login"><span class = "user_icon"><i class = "fa fa-user" aria-hidden="true"></i></span>Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </div>
-</nav>
-<section layout:fragment = "content" class = "container mt-5">
-    <h1>Add new product</h1>
-    <form th:action = "@{/products/add}" th:object = "${product}" method = "post" class = "needs-validation" novalidate enctype ="multipart/form-data">
-        <div class = "mb-3">
-            <label for = "name" class = "form-label">Name:</label>
-            <input type = "text" th:field = "*{name}" class = "form-control" id = "name" required>
-            <div class = "text-danger" th:if = "${#fields.hasErrors('name')}" th:errors = "*{name}"></div>
-        </div>
-        <div class = "mb-3">
-            <label for = "price" class = "form-label">Price:</label>
-            <input type = "text" th:field = "*{price}" class = "form-control" id = "price" required>
-        </div>
-        <div class = "mb-3">
-            <label for = "category" class = "form-label">Category:</label>
-            <select th:field = "*{category}" class = "form-control" id = "category">
-                <option th:each = "category : ${categories}" th:value = "${category.ID}" th:text = "${category.name}"></option>
-            </select>
-        </div>
-        <div class = "mb-3">
-            <label for = "description" class = "form-label">Description:</label>
-            <textarea th:field = "*{description}" class = "form-control" id = "description" required></textarea>
-        </div>
-        <div class = "mb-3">
-            <label for = "imageFile" class = "form-label"></label>
-            <input type="file" th:field="*{imageFile}" class="form-control" id="imageFile" accept="image/*">
-        </div>
-        <button type = "submit" class = "btn btn-primary">Add Product</button>
-        <a th:href = "@{/products}" class = "btn btn-link">Cancel</a>
-    </form>
-</section>
-<script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div class = "container">
+        <section layout:fragment="content">
+            <a class="font-weight-bold fs-1">Add new product</a>
+            <form th:action = "@{/products/add}" th:object = "${product}" method = "post" class = "needs-validation" novalidate enctype ="multipart/form-data">
+                <div class = "mb-3">
+                    <label for = "name" class = "form-label">Name:</label>
+                    <input type = "text" th:field = "*{name}" class = "form-control" id = "name" required>
+                    <div class = "text-danger" th:if = "${#fields.hasErrors('name')}" th:errors = "*{name}"></div>
+                </div>
+                <div class = "mb-3">
+                    <label for = "price" class = "form-label">Price:</label>
+                    <input type = "text" th:field = "*{price}" class = "form-control" id = "price" required>
+                </div>
+                <div class = "mb-3">
+                    <label for = "category" class = "form-label">Category:</label>
+                    <select th:field = "*{category}" class = "form-control" id = "category">
+                        <option th:each = "category : ${categories}" th:value = "${category.ID}" th:text = "${category.name}"></option>
+                    </select>
+                </div>
+                <div class = "mb-3">
+                    <label for = "description" class = "form-label">Description:</label>
+                    <textarea th:field = "*{description}" class = "form-control" id = "description" required></textarea>
+                </div>
+                <div class = "mb-3">
+                    <label for = "imageFile" class = "form-label"></label>
+                    <input type="file" th:field="*{imageFile}" class="form-control" id="imageFile" accept="image/*">
+                </div>
+                <button type = "submit" class = "btn btn-primary">Add Product</button>
+                <a th:href = "@{/products}" class = "btn btn-link">Cancel</a>
+            </form>
+        </section>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/js/popper.min.js}"></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/jquery-3.0.0.min.js}"></script>
+    <script th:src="@{/js/plugin.js}"></script>
+    <script th:src="@{/js/jquery.mCustomScrollbar.concat.min.js}"></script>
+    <script th:src="@{/js/custom.js}"></script>
 </body>
 </html>
