--- a/WebBanCafeV3/src/main/resources/templates/users/login.html
+++ b/WebBanCafeV3/src/main/resources/templates/users/login.html
@@ -5,32 +5,89 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- mobile metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- site metas -->
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <!-- style css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <!-- Responsive-->
+    <link rel="stylesheet" th:href="@{/css/responsive.css}">
+    <!-- fevicon -->
+    <link rel="icon" th:href="@{/images/fevicon.png}" type="image/gif" />
+    <!-- font css -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+    <!-- Scrollbar Custom CSS -->
+    <link rel="stylesheet" th:href="@{/css/jquery.mCustomScrollbar.min.css}">
+    <!-- Tweaks for older IEs-->
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 </head>
 <body>
-    <section layout:fragment="content" class="container mt-5">
-        <h1 class="mb-4">Login</h1>
-        <form th:action="@{/login}" method="post">
-            <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
-            <div th:if="${param.logout}" class="alert alert-success">You have been logged out.</div>
-            <div class="form-group mb-4">
-                <label for="username"></label>
-                <input type="text" class="form-control" required id="username" name="username" placeholder="Username">
+<div class="header_section header_bg">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="/"><img th:src="@{/images2/logo.png}"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
+                    <li class="nav-item active">
+                        <a class="nav-link text-black" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="/coffees">Coffees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="/products">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="/blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="/contact" style="margin-right: 20px;">Contact</a>
+                    </li>
+                </ul>
             </div>
-            <div class="form-group mb-4">
-                <label for="password"></label>
-                <input type="password" class="form-control" required id="password" name="password" placeholder="Password">
-            </div>
-            <div class="form-check d-flex justify-content-start mb-4">
-                <input type="checkbox" class="form-check-input" name="remember-me" id="remember-me">
-                <label class="form-check-label" for="remember-me"> Remember me</label>
-            </div>
-            <div class="d-grid gap-2 form-action">
-                <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
-                <p class="mt-3 mb-0">Don't have an account? <a class="text-info text-center" th:href="${'/register'}">Sign up?</a> </p>
-            </div>
-        </form>
-    </section>
+        </nav>
+    </div>
+</div>
+    <div class="container">
+        <section layout:fragment="content">
+            <a class="mb-4 font-weight-bold fs-1">Login</a>
+            <form th:action="@{/login}" method="post">
+                <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
+                <div th:if="${param.logout}" class="alert alert-success">You have been logged out.</div>
+                <div class="form-group mb-4">
+                    <label for="username"></label>
+                    <input type="text" class="form-control" required id="username" name="username" placeholder="Username">
+                </div>
+                <div class="form-group mb-4">
+                    <label for="password"></label>
+                    <input type="password" class="form-control" required id="password" name="password" placeholder="Password">
+                </div>
+                <div class="form-check d-flex justify-content-start mb-4">
+                    <input type="checkbox" class="form-check-input" name="remember-me" id="remember-me">
+                    <label class="form-check-label" for="remember-me"> Remember me</label>
+                </div>
+                <div class="d-grid gap-2 form-action">
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+                    <p class="mt-3 mb-0">Don't have an account? <a class="text-info text-center" th:href="${'/register'}">Sign up?</a> </p>
+                </div>
+            </form>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
