--- a/WebBanCafeV3/src/main/resources/templates/home/about.html
+++ b/WebBanCafeV3/src/main/resources/templates/home/about.html
@@ -30,7 +30,7 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
    </head>
-   <body>
+   <body class="AboutPage-body">
    <div class="header_section header_bg">
       <div class="container-fluid">
          <nav class="navbar navbar-expand-lg">
@@ -88,7 +88,7 @@
       <div class="container mt-5">
          <div class="row">
             <div class="col-md-12 text-center mb-4">
-               <h1 class="about_taital">About Our shop</h1>
+               <h1 class="about_taital text-white">About Our shop</h1>
                <div class="bulit_icon"><img th:src="@{/images2/bulit-icon.png}"></div>
             </div>
          </div>
