--- a/WebBanCafeV3/src/main/resources/templates/home/contact.html
+++ b/WebBanCafeV3/src/main/resources/templates/home/contact.html
@@ -30,7 +30,7 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
    </head>
-   <body>
+   <body class="ContactPage-body">
       <div class="header_section header_bg">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg">
